2017-07-23  Araki Ken  <arakiken@users.sf.net>

	* man/mlterm.1, README.ja, PROTOCOL: Updated.

	* ui_screen.[ch]:
	  - ui_set_trim_trailing_newline_in_pasting() which trims trailing newline
	    in pasting text is added.
	  - "trim_trailing_newline_in_pasting" is added to OSC 5379, 5380 etc.
	  - shortcut_str() is called just after shortcut_match() in key_pressed().

	* vt_screen.c: check_or_copy_region() doesn't append extra space at the end.

	* version.h: 3.8.2 -> 3.8.2post

2017-07-17  Araki Ken  <arakiken@users.sf.net>

	* 3.8.2 released.
	  (tag "rel-3_8_2")

	* configure.in, mlterm.spec, main/version.h.in,
	  MLTermPty.c, android/jni/version.h:
	  updated for 3.8.2.

	* PROTOCOL, man/mlterm.1: Updated.

	* im_iiimf.c, im_uim.c, vte.c: Compiling error is fixed.

2017-07-15  Araki Ken  <arakiken@users.sf.net>

	* ui_main_config.c: If USE_FREETYPE is defined, "use_anti_alias" option works.

	* fb/ui_font.c:
	  - FT_Library_SetLcdFilter() is called in load_ft().
	  - FONT_NOAA of ui_font_present_t is checked.

	* gtk/vte.c:
	  - vte_terminal_hierarchy_changed() is moved to vte_x11.c
	  - vte_terminal_draw(), vte_terminal_spawn_async(), vte_pty_spwan_async(),
	    vte_terminal_{get|set}_allow_hyperlink and
	    vte_terminal_hyperlink_check_event() are added.
	  - Whether 'exception' is NULL or not is checked in
	    vte_terminal_set_word_char_exceptions().

	* gtk/vte_x11.c: FORCE_TRANSPARENCY macro is added.

2017-07-05  Araki Ken  <arakiken@users.sf.net>

	* main-con.c: It is assumed that mlterm-con-server is in BINDIR
	  instead of LIBEXECDIR/mlterm on cygwin and msys.

	* bl_pty_helper.c, c_imagelib.c, c_regis.c, */ui_imagelib.c,
	  vt_config_menu.c: BL_LIBEXECDIR is used.

	* bl_path.h: BL_LIBEXECDIR(suffix) is added.

	* ui_im_status_screen-cocoa.m: Compiling error is fixed.

2017-07-02  Araki Ken  <arakiken@users.sf.net>

	* ui_screen.c: <dev> in OSC 5379;<dev>:a=b works.

	* vt_parser.c: "challenge" of OSC 5380 works from console not only mlconfig.
